Thu May 26 17:03:10 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* TODO doc/userguide.sgml: update for SSL support

Thu May 26 14:45:23 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/net.c: changed ciphers using GnuTLS

Thu May 26 00:55:57 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* doc/htdoc/contrib.html doc/htdoc/docs.html doc/htdoc/faq.html
	* doc/htdoc/index.html doc/htdoc/news.html doc/htdoc/software.html
	* doc/htdoc/support.html doc/htdoc/which_api.html
	- cleaned up html, some reformatting.

Wed May 25 12:02:50 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/net.c TODO NEWS:
	- fix leak using OpenSSL
	- use correct cipher with OpenSSL

Tue May 24 12:53:16 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* acinclude.m4 configure.in src/tds/login.c src/tds/mem.c:
	* src/tds/net.c:
	- support OpenSSL for SSL

Mon May 23 10:04:25 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/login.c src/tds/mem.c src/tds/net.c:
	- move ssl code in net.c
	- fix query_timeout setting during connect

Mon May 23 10:04:25 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/unittests/dbmorecmds.c src/dblib/unittests/rpc.c:
	* src/dblib/unittests/t0001.c src/dblib/unittests/t0003.c:
	* src/dblib/unittests/t0004.c src/dblib/unittests/t0005.c:
	* src/dblib/unittests/t0006.c src/dblib/unittests/t0007.c:
	* src/dblib/unittests/t0008.c src/dblib/unittests/t0009.c:
	* src/dblib/unittests/t0010.c src/dblib/unittests/t0012.c:
	* src/dblib/unittests/t0013.c src/dblib/unittests/t0015.c:
	* src/dblib/unittests/t0016.c src/dblib/unittests/t0017.c:
	* src/dblib/unittests/t0018.c src/dblib/unittests/t0023.c:
	- do not delete temporary table

Sun May 22 11:03:16 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* NEWS TODO configure.in: use odbc_config if possible

Sun May 22 10:26:02 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/prepare_query.c src/odbc/unittests/const_params.c: